<resources>
    <string name="app_name">ShipmentTracking</string>
    <string name="introduction">Hi! I\'m a shipment tracking app. :)</string>
    <string name="deliveryman">deliveryman</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Type your username here</string>
    <string name="password_hint">Add your password too</string>
    <string name="registration">Registration</string>
    <string name="email">Email address</string>
    <string name="confirm_email">Confirm email address</string>
    <string name="im_not_a_robot">I\'m not a robot.</string>
    <string name="complete_registration">Complete registration</string>
    <string name="happy_to_see_you_here">Happy to see you here!</string>
    <string name="tracking_number">Enter the tracking number of your shipment:</string>
    <string name="tracking_number_hint">Tracking number</string>
    <string name="track">Track</string>
    <string name="no_account">Go to registration</string>
    <string name="log_out">Log out</string>
    <string name="wait_for_me">Wait for me</string>
    <string name="info_package">Here are the information\nabout your package:</string>
    <string name="info_package2">Here are the information about your package:</string>
    <string name="tracking_code_placeholder">Tracking code placeholder</string>
    <string name="tracking_code">Tracking Code:</string>
    <string name="carrier">Carrier:</string>
    <string name="carrier_placeholder">Carrier placeholder</string>
    <string name="tracking_info">Tracking info:</string>
    <string name="tracking_info_placeholder">Tracking info placeholder</string>
    <string name="address_to"><u>Shipped To:</u></string>
    <string name="locality">Locality:</string>
    <string name="locality_placeholder">Locality placeholder</string>
    <string name="street_address">Street Address:</string>
    <string name="street_address_placeholder">Street address placeholder</string>
    <string name="postal_code">Postal Code:</string>
    <string name="postal_code_placeholder">Postal code placeholder</string>
    <string name="state_or_province_placeholder">State or province placeholder</string>
    <string name="state_or_province">State Or Province:</string>
    <string name="country_placeholder">Country placeholder</string>
    <string name="country">Country:</string>
    <string name="change_shipping_address_button">Change shipping address</string>
    <string name="change_shipping_address_text">You can change your\nshipping address here:</string>
    <string name="change_shipping_address_text2">You can change your shipping address here:</string>
    <string name="street_number">Street Number:</string>
    <string name="update_address">Update address</string>
    <string name="street_name">Street Name:</string>
    <string name="street_style">Street Style:</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_shipping">Cancel Shipping</string>
    <string name="i_m_a_delivery_man">I\'m a delivery man</string>
    <string name="delivery_code">Add your personal delivery code:</string>
    <string name="personal_code">Personal code</string>
    <string name="secret_part">Welcome to the secret part of the app!</string>
    <string name="delete_package">Click here to delete a package.</string>
    <string name="cancel_image">cancel image</string>
    <string name="check_image">check image</string>
    <string name="search_image">search image</string>
    <string name="search_package">Click here to search for a package.</string>
    <string name="lost">Got lost while delivering a package?</string>
    <string name="show_my_location">Show my location</string>
    <string name="be_sure">You can delete a package here, but be sure\nthat you\'ve already delivered it.</string>
    <string name="tracking_number_d_man">Enter the tracking number of the package:</string>
    <string name="delete">Delete</string>
    <string name="create_image">create image</string>
    <string name="create_package">Click here to create a package.</string>
    <string name="new_package">Make sure that you type the data correctly as your boss told you so.</string>
    <string name="create_package_short">Create package</string>
    <string name="street_type">Street Type:</string>
    <string name="current_location">Your current location is:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="address">Address:</string>
    <string name="good_to_see_search">Good to see you!\nYou can search for packages here.</string>
    <string name="search">Search</string>
    <string name="queried_packages">Queried packages</string>
    <string name="shipping_address">Shipping address:</string>
</resources>