<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flower_stamp_background">

    <TextView
        android:id="@+id/trackingInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_package"
        android:textAlignment="center"
        android:textColor="@color/my_blue"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <LinearLayout
        android:id="@+id/trackingCodeLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackingInfoTextView"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/trackingInfoTextView">

        <TextView
            android:id="@+id/trackingCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking_code"
            android:textSize="15sp"
            android:textColor="@color/my_blue"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/actualTrackingCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking_code_placeholder"
            android:textSize="15sp"
            android:layout_marginTop="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/carrierLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackingInfoTextView"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/trackingCodeLinear">

        <TextView
            android:id="@+id/carrierTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrier"
            android:textSize="15sp"
            android:textColor="@color/my_blue"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/actualCarrierTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrier_placeholder"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/toAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/address_to"
        android:textAlignment="center"
        android:textColor="@color/my_blue"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/localityLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carrierLinear" />

    <LinearLayout
        android:id="@+id/localityLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackingInfoTextView"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/toAddressTextView">

        <TextView
            android:id="@+id/localityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locality"
            android:textSize="15sp"
            android:textColor="@color/my_blue"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/actualLocalityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locality_placeholder"
            android:textSize="15sp"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/streetAddressLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackingInfoTextView"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/localityLinear">

        <TextView
            android:id="@+id/streetAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_address"
            android:textSize="15sp"
            android:textColor="@color/my_blue"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/actualStreetAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_address_placeholder"
            android:textSize="15sp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/postalCodeLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackingInfoTextView"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/streetAddressLinear">

        <TextView
            android:id="@+id/postalCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
            android:textSize="15sp"
            android:textColor="@color/my_blue"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/actualPostalCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code_placeholder"
            android:textSize="15sp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stateOrProvinceLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackingInfoTextView"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/postalCodeLinear">

        <TextView
            android:id="@+id/stateOrProvinceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_or_province"
            android:textSize="15sp"
            android:textColor="@color/my_blue"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/actualStateOrProvinceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_or_province_placeholder"
            android:textSize="15sp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/countryLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackingInfoTextView"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/stateOrProvinceLinear">

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="15sp"
            android:textColor="@color/my_blue"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/actualCountryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_placeholder"
            android:textSize="15sp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/changeAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_shipping_address_button"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryLinear"
        app:layout_constraintVertical_bias="0.876"
        android:onClick="changeAddress"/>

    <Button
        android:id="@+id/cancelShippingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelShipping"
        android:text="@string/cancel_shipping"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryLinear"
        app:layout_constraintVertical_bias="0.876" />

</androidx.constraintlayout.widget.ConstraintLayout>