<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stamp_in_corner">

    <TextView
        android:id="@+id/happyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy_to_see_you_here"
        android:textColor="@color/my_blue"
        android:textStyle="italic"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/happyTextView"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happyTextView"
        app:layout_constraintVertical_bias="0.236">

        <TextView
            android:id="@+id/trackNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking_number"
            android:textColor="@color/my_blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/trackIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:hint="@string/tracking_number_hint"
            android:inputType="textCapCharacters" />

        <Button
            android:id="@+id/trackSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="tracking"
            android:text="@string/track" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>